assets/css/home.css
/*header*/
body {
    padding: 0;
    margin: 0;
}

.header{
    width: 100%;
    height: 72px;
    background-color: #4F594A;
}
.header-elements {
    max-width: 926px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
}

.header-btn {
    width: 119px;
    height: 40px;
    top: 16px;
    background: rgba(181, 191, 170, 0.93);
    padding: 0;
    position: relative;
    border: 0;
}

.brand-name{
    justify-content: center;
    font-family: 'Futura';
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 27px;
    color: #ffffff;
}

.nav-bar{
    justify-content: center;
    display: flex;
    flex-direction: row;

}

.nav-list{
    display: flex;
    flex-direction: row;
}

.nav-list > ul{
    justify-content: space-around;
    display: flex;
    flex-direction: row;
    list-style-type: none;
    text-decoration: none;
    color: #ffffff;
}

.header__list_item > a{
    margin-right: 30px;
    color: #ffffff;
    text-decoration: none;
}

/*banner*/
.hero{
    background-image: url(/assets/images/home/home-hero.png);
    width: 100%;
    height: 743px;
    position: center;
    background-size: contain;
}
.hero-txt{
    margin: 0;
    font-family: 'Playfair Display';
    font-style: normal;
    font-weight: 400;
    font-size: 50px;
    line-height: 67px;
    width: 270px;
    height: 67px;
    color: #ffffff;
   
}
span{
    font-family: 'Playfair Display';
    font-style: normal;
    font-weight: 700;
    font-size: 70px;
    line-height: 93px;
    color: #FFFFFF;
    width: 413px;
    height: 93px;
}
/*about us coloumn*/

.about_us_column{
    display: flex;
    flex-direction: row;
    width: 1440px;
    margin: auto;

}
.about_us_column_img{
    width: 592px;
    height: 531px;
    margin: 246px;
    margin-top: 123px;
    margin-left: 140px;
    margin-right: 100px;
}
.about_us_column_txt > h1 {
    position: center;
    width: 328px;
    height: 93px;
    left: 828px;
    top: 766px;
    font-family: 'Lexend Deca';
    font-weight: 400;
    font-size: 64px;
    line-height: 80px;
    font-style: normal;
    color: #4F594A;
    margin-top: 123px ;

}
.about_us_column_txt > p{
    position: center;
    width: 472px;
    height: 400px;
    margin-top: 38px;
    font-family: 'Lato';
    font-weight: 500;
    font-size: 15px;
    line-height: 150%;
    font-style: normal;
}
.about_us_column_btn{
    width: 177px;
    height: 61px;
    background: rgba(104, 115, 99, 0.95);
    color: #ffffff;
    border: 0;
}

/*our rooms column*/

.our_rooms_column{

    /* NO NEED FOR STYLING HERE YET */

    /* width: 926px;
    height: 732px;
    max-width: 926px;
    margin: 0 auto;
    background-color: red; */
    
}

.our_rooms_column_txt{
    width: 1100px;
    height: 30px;
    font-family: 'Lato';
    font-style: normal;
    font-weight: 300;
    font-size: 30px;
    line-height: 30px;
    color: rgba(104, 115, 99, 0.8);
    margin: auto ;
    margin-top: 54px;
    margin-bottom: 56px;
}
.our_rooms_column_images{
    display: flex;
    flex-direction: row;
    margin: auto ;
   
    
}
.our_rooms_column_item{
    width: 399px;
    height: 373px;
    margin-right: 21px;
}
.our_rooms_column_images_ctn{
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: center;
    /* margin: auto; */
}
.img-ctn-p{
    width: 250px;
    height: 40px;
    font-family: 'Lao Sangam MN';
    font-style: normal;
    font-weight: 400;
    font-size: 25px;
    line-height: 40px;
    color: #4F594A;
    margin: auto;
}
.our_rooms_column_title_ctn{
    justify-content: center;
    width: 100%;
}
.our_rooms_column_title{
    font-family: 'Lao Sangam MN';
    font-style: normal;
    font-weight: 400;
    font-size: 50px;
    line-height: 66px;
    width: 295px;
    height: 66px;
    color: #4F594A;

}
.our_rooms_column_btn{
    width: 177px;
    height: 61px;
    left: 645px;
    top: 2079px;
    font-family: 'Lato';
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    color: #FFFFFF;
    background: rgba(104, 115, 99, 0.95);
}

/*facilities_column*/
.facilities_column{
    display: flex;
    flex-direction: column;
}
.facilities_column_img_ctn{
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: center;
}
.facilities_column_txt{
    width: 1100px;
    height: 30px;
    font-family: 'Lato';
    font-style: normal;
    font-weight: 300;
    font-size: 30px;
    line-height: 30px;
    color: rgba(104, 115, 99, 0.8);

    margin: auto ;
    margin-top: 54px;
    margin-bottom: 56px;
}
.facilities_column_item{
    height: 425px;
    width: 385px;
    left: 544px;
    top: 2279px;
    border-radius: 0px;
    margin-right: 20px;

    /*font-family: 'Lao Sangam MN';
    font-style: normal;
    font-weight: 400;
    font-size: 30px;
    line-height: 40px;
    width: 197px;
    height: 400px;
    color: #4F594A;*/
}

